# git-mkver-with-poetry

./: README.md  pyproject.toml
